<resources>
    <string name="app_name">CookBook</string>
    <string name="action_settings">Settings</string>

    <string name="text_nameDish">Название блюда</string>
    <string name="text_description">Введите описание</string>
    <string name="text_ingredients">Введите ингридиенты для блюда</string>
    <string name="text_time">Время готовки(в минутах)</string>
    <string name="text_preparation">Способ приготовления</string>


    <string name="textS_nameDish">нет названия блюда</string>
    <string name="textS_description">нет описания</string>
    <string name="textS_ingredients">нет ингридиентов</string>
    <string name="textS_time">не назначено</string>
    <string name="textS_preparation">не введен способ приготовления</string>

    <string name="note_details_title">Создание рецепта</string>
    <string name="select_details_title">Рецепт</string>
    <string name="save">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="textSize">Размер текста</string>
    <string name="settings_icon">настройки</string>
    <string name="dark_background">Темная тема</string>


</resources>
