<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_nameDish"
                android:maxLength= "30"
                android:minHeight="20dp"
                android:gravity="top"
                android:padding="16dp"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_description"
                android:minHeight="50dp"
                android:gravity="top"
                android:padding="16dp"

                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"/>





            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/text_ingredients"
                android:minHeight="50dp"
                android:padding="16dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"/>
            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/text_time"
                android:minHeight="50dp"
                android:padding="16dp"
                android:maxLength= "3"

                android:ems="10"
                android:inputType="number"

                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"/>


            <EditText
                android:id="@+id/preparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_preparation"
                android:minHeight="200dp"
                android:gravity="top"
                android:padding="16dp"

                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"

                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>