<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Название блюда"
                android:minHeight="20dp"
                android:gravity="center"
                android:paddingLeft="16dp"

                android:textStyle="bold"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"
                />


            <TextView
                android:id="@+id/tv_nameDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/textS_nameDish"
                android:maxLength="30"
                android:minHeight="20sp"
                android:padding="16dp"


                android:textColor="@color/colorText"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Описание"
                android:minHeight="20dp"
                android:gravity="center"
                android:paddingLeft="16dp"

                android:textStyle="bold"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText"
                />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textS_description"
                android:minHeight="20dp"
                android:gravity="top"
                android:padding="16dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorText" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:minHeight="20dp"
                        android:paddingLeft="16dp"

                        android:text="Ингридиенты"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/font"
                        android:gravity="top"
                        android:hint="@string/textS_ingredients"
                        android:minHeight="200dp"

                        android:padding="16dp"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textSizeBig"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:minHeight="20dp"
                        android:gravity="center"
                        android:paddingLeft="16dp"

                        android:text="Время готовки"
                        android:textStyle="bold"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/colorText"
                        />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|center"
                        android:minHeight="200dp"
                        android:padding="16dp"


                        android:hint="@string/textS_time"
                        android:textColor="@color/colorText"
                        android:textSize="30sp" />

                </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/preparation"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:minHeight="20dp"
        android:gravity="center"
        android:paddingLeft="16dp"


        android:text="Рецепт"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorText"
        />

    <TextView
        android:id="@+id/tv_preparation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:gravity="top"
        android:padding="16dp"


        android:hint="@string/textS_preparation"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorText"/>


    </LinearLayout>

    </ScrollView>


</LinearLayout>